# claude-discord

./: .cursorrules  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  discord-bot.service  pyproject.toml
.claude/: settings.json
.claude/commands/: new-cog.md  verify.md
.githooks/: pre-commit
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  (+1 more)
claude_code_core/: __init__.py  backend.py  codex_runner.py
claude_discord/: __init__.py  bot.py  cli.py  cog_loader.py  concurrency.py  lounge.py  main.py  session_sync.py  setup.py  worktree.py
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  SECURITY.md
scripts/: cleanup_worktrees.sh  pre-start.sh
src/: bot.py
tests/: conftest.py  test_api_server.py  test_api_tasks.py  test_architecture.py  test_ask_feature.py  test_auto_upgrade.py  test_backend_protocol.py  test_chunker.py  test_claude_chat.py  test_cli.py  test_codex_runner.py  test_coordination.py  test_embeds.py  test_event_processor.py  test_lounge.py  test_main_backend.py  test_main_config.py  test_model_command.py  test_notification_repo.py  test_parser.py  test_repository.py  test_resume_repo.py  test_rewind_fork.py  test_run_helper.py  test_runner.py  test_scheduler.py  test_session_registry.py  test_session_sync.py  test_settings_repo.py  test_setup.py  test_skill_command.py  test_status.py  test_sync_command.py  test_sync_settings.py  test_task_repo.py  test_thread_dashboard.py  test_thread_relay.py  test_upgrade_slash.py  test_views.py  test_webhook_trigger.py  (+1 more)
(+63 files in other folders)
